--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,5 +1,6 @@
 .newscard {
   height: 576px;
+  min-width: 224px;
   overflow: hidden;
   margin: 0;
   padding: 0 0 17px 0;
@@ -172,6 +173,7 @@
 @media screen and (min-width: 481px) and (max-width: 1023px) {
   .newscard {
     height: 420px;
+    width: 224px;
     overflow: hidden;
     margin: 0;
     padding: 0 0 16px 0;
